add jwt support
